Added API and service methods for shopping cart; testing  shopping cart management in progress

--- a/VirtoCommerce.Webshop/VirtoCommerce.Webshop.csproj
+++ b/VirtoCommerce.Webshop/VirtoCommerce.Webshop.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Styles\cart.png" />
     <Content Include="Styles\webshop.css" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
@@ -95,6 +96,25 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Client\DataContracts\Cart\Address.cs" />
+    <Compile Include="Client\DataContracts\AddressType.cs" />
+    <Compile Include="Client\DataContracts\Coupon.cs" />
+    <Compile Include="Client\DataContracts\Cart\Discount.cs" />
+    <Compile Include="Client\DataContracts\Cart\LineItem.cs" />
+    <Compile Include="Client\DataContracts\Cart\Payment.cs" />
+    <Compile Include="Client\DataContracts\Cart\Shipment.cs" />
+    <Compile Include="Client\DataContracts\Cart\ShoppingCart.cs" />
+    <Compile Include="Client\DataContracts\OrderSearchResult.cs" />
+    <Compile Include="Client\DataContracts\Order\Address.cs" />
+    <Compile Include="Client\DataContracts\Order\CustomerOrder.cs" />
+    <Compile Include="Client\DataContracts\Order\Discount.cs" />
+    <Compile Include="Client\DataContracts\Order\LineItem.cs" />
+    <Compile Include="Client\DataContracts\Order\PaymentIn.cs" />
+    <Compile Include="Client\DataContracts\Order\Shipment.cs" />
+    <Compile Include="Client\DataContracts\Order\ShipmentItem.cs" />
+    <Compile Include="Client\DataContracts\Order\ShipmentPackage.cs" />
+    <Compile Include="Client\DataContracts\PaymentMethod.cs" />
+    <Compile Include="Client\DataContracts\TaxDetail.cs" />
     <Compile Include="Client\VirtoCommerceClient.cs" />
     <Compile Include="Client\ApiGetRequest.cs" />
     <Compile Include="Client\ApiResponse.cs" />
@@ -107,7 +127,6 @@
     <Compile Include="Client\DataContracts\Inventory.cs" />
     <Compile Include="Client\DataContracts\InventoryStatus.cs" />
     <Compile Include="Client\DataContracts\ItemImage.cs" />
-    <Compile Include="Client\DataContracts\PaymentMethod.cs" />
     <Compile Include="Client\DataContracts\Price.cs" />
     <Compile Include="Client\DataContracts\Product.cs" />
     <Compile Include="Client\DataContracts\ProductSearchResult.cs" />
@@ -118,34 +137,45 @@
     <Compile Include="Client\Security\HmacUtility.cs" />
     <Compile Include="Client\IVirtoCommerceClient.cs" />
     <Compile Include="Client\DataContracts\ManagementError.cs" />
+    <Compile Include="Controllers\ShoppingCartController.cs" />
     <Compile Include="Controllers\WebshopSettingsController.cs" />
     <Compile Include="Converters\CategoryConverters.cs" />
     <Compile Include="Converters\PriceConverters.cs" />
     <Compile Include="Converters\ProductConverters.cs" />
     <Compile Include="Converters\ShopConverters.cs" />
-    <Compile Include="Drivers\CategoryListPartDriver.cs" />
+    <Compile Include="Converters\ShoppingCartConverters.cs" />
+    <Compile Include="Drivers\CategoryListDriver.cs" />
+    <Compile Include="Drivers\ProductDriver.cs" />
     <Compile Include="Drivers\ProductListDriver.cs" />
+    <Compile Include="Drivers\ShoppingCartPreviewDriver.cs" />
     <Compile Include="Handlers\WebshopSettingsHandler.cs" />
     <Compile Include="Models\CategoryListPart.cs" />
     <Compile Include="Models\ProductListPart.cs" />
+    <Compile Include="Models\ProductPart.cs" />
+    <Compile Include="Models\ShoppingCartPart.cs" />
+    <Compile Include="Models\ShoppingCartPreviewPart.cs" />
     <Compile Include="Models\WebshopSettingsPart.cs" />
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Services\CatalogService.cs" />
     <Compile Include="Services\ICatalogService.cs" />
     <Compile Include="Services\IPriceService.cs" />
+    <Compile Include="Services\IShoppingCartService.cs" />
     <Compile Include="Services\PriceService.cs" />
+    <Compile Include="Services\ShoppingCartService.cs" />
     <Compile Include="ViewModels\Category.cs" />
+    <Compile Include="ViewModels\LineItem.cs" />
     <Compile Include="ViewModels\PagedList.cs" />
     <Compile Include="ViewModels\Price.cs" />
     <Compile Include="ViewModels\Product.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="ViewModels\Shop.cs" />
+    <Compile Include="ViewModels\ShoppingCart.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <Content Include="Views\Parts\Product.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\WebshopSettings.cshtml" />
@@ -155,6 +185,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\ProductList.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\ShoppingCartPreview.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
