--- a/VirtoCommerce.Webshop/VirtoCommerce.Webshop.csproj
+++ b/VirtoCommerce.Webshop/VirtoCommerce.Webshop.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8A3EBB19-FDDE-444A-B018-E12BEB74F435}</ProjectGuid>
+    <ProjectGuid>{C3C62FAA-4CF0-45A5-9981-E3FD4D8B2A43}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -24,6 +24,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -48,8 +49,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -57,24 +58,42 @@
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web.DynamicData" />
-    <Reference Include="System.Web.Mvc, Version=5.2.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\lib\aspnetmvc\System.Web.Mvc.dll</HintPath>
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
+    <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.Routing" />
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="VirtoCommerce.ApiClient, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\Source\Repos\vc-community\STOREFRONT\ApiClient\bin\Debug\VirtoCommerce.ApiClient.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Styles\cart.png" />
@@ -96,62 +115,44 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client\DataContracts\Cart\Address.cs" />
-    <Compile Include="Client\DataContracts\AddressType.cs" />
-    <Compile Include="Client\DataContracts\Coupon.cs" />
-    <Compile Include="Client\DataContracts\Cart\Discount.cs" />
-    <Compile Include="Client\DataContracts\Cart\LineItem.cs" />
-    <Compile Include="Client\DataContracts\Cart\Payment.cs" />
-    <Compile Include="Client\DataContracts\Cart\Shipment.cs" />
-    <Compile Include="Client\DataContracts\Cart\ShoppingCart.cs" />
-    <Compile Include="Client\DataContracts\OrderSearchResult.cs" />
-    <Compile Include="Client\DataContracts\Order\Address.cs" />
-    <Compile Include="Client\DataContracts\Order\CustomerOrder.cs" />
-    <Compile Include="Client\DataContracts\Order\Discount.cs" />
-    <Compile Include="Client\DataContracts\Order\LineItem.cs" />
-    <Compile Include="Client\DataContracts\Order\PaymentIn.cs" />
-    <Compile Include="Client\DataContracts\Order\Shipment.cs" />
-    <Compile Include="Client\DataContracts\Order\ShipmentItem.cs" />
-    <Compile Include="Client\DataContracts\Order\ShipmentPackage.cs" />
-    <Compile Include="Client\DataContracts\PaymentMethod.cs" />
-    <Compile Include="Client\DataContracts\TaxDetail.cs" />
-    <Compile Include="Client\VirtoCommerceClient.cs" />
-    <Compile Include="Client\ApiGetRequest.cs" />
-    <Compile Include="Client\ApiResponse.cs" />
-    <Compile Include="Client\DataContracts\Asset.cs" />
-    <Compile Include="Client\DataContracts\Association.cs" />
-    <Compile Include="Client\DataContracts\Category.cs" />
-    <Compile Include="Client\DataContracts\EditorialReview.cs" />
-    <Compile Include="Client\DataContracts\Facet.cs" />
-    <Compile Include="Client\DataContracts\FacetValue.cs" />
-    <Compile Include="Client\DataContracts\Inventory.cs" />
-    <Compile Include="Client\DataContracts\InventoryStatus.cs" />
-    <Compile Include="Client\DataContracts\ItemImage.cs" />
-    <Compile Include="Client\DataContracts\Price.cs" />
-    <Compile Include="Client\DataContracts\Product.cs" />
-    <Compile Include="Client\DataContracts\ProductSearchResult.cs" />
-    <Compile Include="Client\DataContracts\ResponseCollection.cs" />
-    <Compile Include="Client\DataContracts\SeoKeyword.cs" />
-    <Compile Include="Client\DataContracts\Store.cs" />
-    <Compile Include="Client\Security\HmacMessageProcessingHandler.cs" />
-    <Compile Include="Client\Security\HmacUtility.cs" />
     <Compile Include="Client\IVirtoCommerceClient.cs" />
-    <Compile Include="Client\DataContracts\ManagementError.cs" />
+    <Compile Include="Client\VirtoCommerceClient.cs" />
+    <Compile Include="Controllers\CheckoutController.cs" />
+    <Compile Include="Controllers\ControllerBase.cs" />
     <Compile Include="Controllers\ShoppingCartController.cs" />
-    <Compile Include="Controllers\WebshopSettingsController.cs" />
-    <Compile Include="Converters\CategoryConverters.cs" />
-    <Compile Include="Converters\PriceConverters.cs" />
-    <Compile Include="Converters\ProductConverters.cs" />
-    <Compile Include="Converters\ShopConverters.cs" />
-    <Compile Include="Converters\ShoppingCartConverters.cs" />
+    <Compile Include="Converters\AddressConverter.cs" />
+    <Compile Include="Converters\CategoryConverter.cs" />
+    <Compile Include="Converters\LineItemConverter.cs" />
+    <Compile Include="Converters\OrderConverter.cs" />
+    <Compile Include="Converters\PaymentConverter.cs" />
+    <Compile Include="Converters\PaymentMethodConverter.cs" />
+    <Compile Include="Converters\PriceConverter.cs" />
+    <Compile Include="Converters\ProductConverter.cs" />
+    <Compile Include="Converters\ShippingMethodConverter.cs" />
+    <Compile Include="Converters\ShopConverter.cs" />
+    <Compile Include="Converters\ShoppingCartConverter.cs" />
     <Compile Include="Drivers\CategoryListDriver.cs" />
+    <Compile Include="Drivers\CheckoutDriver.cs" />
     <Compile Include="Drivers\ProductDriver.cs" />
     <Compile Include="Drivers\ProductListDriver.cs" />
+    <Compile Include="Drivers\ShoppingCartDriver.cs" />
     <Compile Include="Drivers\ShoppingCartPreviewDriver.cs" />
+    <Compile Include="Drivers\ThanksDriver.cs" />
     <Compile Include="Handlers\WebshopSettingsHandler.cs" />
+    <Compile Include="Migrations.cs" />
     <Compile Include="Models\CategoryListPart.cs" />
+    <Compile Include="Models\CheckoutPart.cs" />
+    <Compile Include="Models\ThanksPart.cs" />
+    <Compile Include="Services\IOrderService.cs" />
+    <Compile Include="Services\OrderService.cs" />
+    <Compile Include="ViewModels\Address.cs" />
+    <Compile Include="ViewModels\Checkout.cs" />
+    <Compile Include="ViewModels\Order.cs" />
+    <Compile Include="ViewModels\PaymentMethod.cs" />
     <Compile Include="Models\ProductListPart.cs" />
     <Compile Include="Models\ProductPart.cs" />
+    <Compile Include="ViewModels\PaymentResult.cs" />
+    <Compile Include="ViewModels\ShippingMethod.cs" />
     <Compile Include="Models\ShoppingCartPart.cs" />
     <Compile Include="Models\ShoppingCartPreviewPart.cs" />
     <Compile Include="Models\WebshopSettingsPart.cs" />
@@ -167,17 +168,14 @@
     <Compile Include="ViewModels\PagedList.cs" />
     <Compile Include="ViewModels\Price.cs" />
     <Compile Include="ViewModels\Product.cs" />
-    <Compile Include="Migrations.cs" />
     <Compile Include="ViewModels\Shop.cs" />
     <Compile Include="ViewModels\ShoppingCart.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Views\Parts\ShoppingCartPreview.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Parts\Product.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\WebshopSettings.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -190,7 +188,19 @@
     <Content Include="Views\Parts\ProductList.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Parts\ShoppingCartPreview.cshtml" />
+    <Content Include="Views\Parts\Product.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\ShoppingCart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\Checkout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\EmptyShoppingCart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\Thanks.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
